# percentagent

./: LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  extract_patterns.py  guess_format.py  lc_time-glibc.json  readthedocs.yml  setup.cfg
doc/: conf.py  index.rst
percentagent/: __init__.py  __main__.py  extract_patterns.py  guess_format.py
percentagent/locales/: glibc.json
utils/: lc_time
