[metadata]
name = percentagent
version = 0.1
description = Guess strftime format strings given a date/time
long_description = file: README.rst
author = Jamey Sharp
author_email = jamey@minilop.net
url = https://github.com/jameysharp/percentagent
project_urls =
  Documentation=https://percentagent.readthedocs.io/en/latest/
  Source Code=https://github.com/jameysharp/percentagent
  Bug Tracker=https://github.com/jameysharp/percentagent/issues
license = BSD-2-Clause

[options]
packages = percentagent
scripts =
  utils/lc_time
install_requires =
  pytz

[options.package_data]
* = locales/*.json
